# rnuk25-async-workshop

./: README.md  book.toml
.github/workflows/: deploy.yaml
projects/01_actor/: Cargo.toml
projects/01_actor/src/: lib.rs  main.rs
projects/02_hyper/: Cargo.toml
projects/02_hyper/src/: main.rs
projects/03_shutdown/: Cargo.toml
projects/03_shutdown/src/: main.rs
projects/04_concurrency/: Cargo.toml
projects/04_concurrency/src/: errors.rs  main.rs  slow_api.rs
projects/05_byte_processing/: Cargo.toml
projects/05_byte_processing/src/: codec.rs  main.rs  slow_api.rs
projects/06_aimd_semaphore/: Cargo.toml
projects/06_aimd_semaphore/src/: aimd.rs  lib.rs
src/: SUMMARY.md
src/00_intro/: index.md
src/01_actor/: index.md
src/02_hyper/: index.md
src/03_shutdown/: cancel_precautions.md  cancel_safety.md  hyper.md  index.md  signals.md
src/04_concurrency/: index.md
src/05_bytes/: buffers.md  chunking.md  codec.md  index.md  push_pull.md
src/06_synchronisation/: index.md  locking.md  notify.md
