[package]
edition = "2021"
name = "p05_byte_processing"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
anyhow = "1"
http-body-util = "0.1.2"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
axum = { version = "0.8", features = ["macros"] }
